<resources>
    <string name="submit_review">Enviar Reseña</string>
    <string name="tutor_lista_titulo">Tutores</string>
    <string name="app_name">U Assists</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="estudiante">Estudiante</string>
    <string name="tutor">Tutor</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrase">Registrase</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="te_has_registrado_con_exito">Te has registrado con exito</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="ve_a">Ve a</string>
    <string name="buscar">Buscar</string>
    <string name="boton_de_buscar">Boton de buscar</string>
    <string name="Logo">Logo</string>
    <string name="boton_de_volver">boton de volver</string>
    <string name="qu_eres">¿Qué eres?</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="cambio_de_contrase_a">Cambio de contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="te_has_cambiado_tu_contrase_a_con_xito">Te has cambiado tu contraseña con éxito</string>
    <string name="ve_al">Ve al</string>
    <string name="review_hint">Escribe tu reseña aquí</string>
    <string name="grade">Calificacion</string>
    <string name="feedback">Reseña</string>
    <string name="boton_calificar">Calificar</string>
    <string name="introduction">La App de tutorías\n
        universitaria para\n
        estudiantes</string>
    <string name="inicio">Inicio</string>
    <string name="text_profile">Nombre: Anthony Rojas Fallas\n
        Teléfono: 8354-9345\n
        Email: arojas@gmail.com\n
        Carrera: Química\n
        Género: Masculino\n
        Dirección: Alajuela, Central, San Rafael
    </string>
    <string name="text_bio">Nombre: Sophie Newman Vargas\n
Teléfono: 6231-1032\n
Email: snewman@gmail.com\n
Carrera: Química\n
Género: Femenino\n
Dirección: Heredia, Belen, San Antonio</string>
    <string name="profile_title">Completar Perfil</string>
    <string name="finish_buttom">Terminar</string>
    <string name="hint_phone">Telefono</string>
    <string name="select">Seleccionado</string>
    <string name="titulo_carrera">Carrera</string>
    <string name="titulo_genero">Genero</string>
    <string name="titulo_provincia">Provincia</string>
    <string name="titulo_canton">Canton</string>
    <string name="titulo_distrito">Distrito</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string-array name="numeros">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="carreras">
        <item>Ingeniería Civil</item>
        <item>Psicología</item>
        <item>Derecho</item>
        <item>Administración de Empresas</item>
        <item>Arquitectura</item>
        <item>Ingeniería Informática</item>
        <item>Enfermería</item>
        <item>Economía</item>
        <item>Biología</item>
        <item>Contabilidad</item>
        <item>Ciencias Políticas</item>
        <item>Medicina</item>
        <item>Veterinaria</item>
    </string-array>
    <string name="reviewJP">Jean Paul Castillo Vives</string>
    <string name="feedbackJP">Grandioso tutor, aprendi mucho de el, es muy atento, explica muy bien, da distintos ejemplos y hace bastante practica.</string>
    <string name="gradeJP">5</string>
    <string name="reviewD">David Ramírez Arce</string>
    <string name="feedbackD">Un tutor muy agradable, con buena metodología para explicar los temas.</string>
    <string name="gradeD">5</string>
    <string name="reviewM">Jean Paul Castillo Vives</string>
    <string name="feedbackM">Grandioso tutor, aprendi mucho de el, es muy atento, explica muy bien, da distintos ejemplos y hace bastante practica.</string>
    <string name="gradeM">5</string>
    <string name="reviewA">Jean Paul Castillo Vives</string>
    <string name="feedbackA">Grandioso tutor, aprendi mucho de el, es muy atento, explica muy bien, da distintos ejemplos y hace bastante practica.</string>
    <string name="gradeA">5</string>
    <string name="boton_de_logout">boton de logout</string>
    <string name="boton_de_perfil">boton de perfil</string>
    <string name="estudiantes">estudiantes</string>
    <string name="bienvenidos">bienvenidos</string>
    <string name="bienvenidos_a">Bienvenidos a</string>
    <string name="estrella_calificaci_n">Estrella calificación</string>
    <string name="calificaci_n">calificación</string>
    <string name="calificacion_asisgnada">Calificacion asisgnada</string>
    <string name="usuario_que_hacer_el_review">Usuario que hacer el review</string>
    <string name="rese_as">Reseñas</string>
    <string name="buscar_carrera">Buscar Carrera</string>
    <string name="boton_de_buscar_barra_de_lista">boton de buscar barra de lista</string>
    <string-array name="generos">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>No Binario</item>
        <item>Prefiero no decir</item>
    </string-array>
    <string-array name="provincias">
        <item>San José</item>
        <item>Alajuela</item>
        <item>Cartago</item>
        <item>Heredia</item>
        <item>Guanacaste</item>
        <item>Puntarenas</item>
        <item>Limón</item>
    </string-array>
    <string-array name="cantones_San_Jose">
        <item>San José</item>
        <item>Escazú</item>
        <item>Desamparados</item>
        <item>Puriscal</item>
        <item>Tarrazú</item>
        <item>Aserrí</item>
        <item>Mora</item>
        <item>Goicoechea</item>
        <item>Santa Ana</item>
        <item>Alajuelita</item>
        <item>Vázquez de Coronado</item>
        <item>Acosta</item>
        <item>Tibás</item>
        <item>Moravia</item>
        <item>Montes de Oca</item>
        <item>Turrubares</item>
        <item>Dota</item>
        <item>Curridabat</item>
        <item>Pérez Zeledón</item>
        <item>León Cortés Castro</item>
    </string-array>
    <string-array name="cantones_Alajuela">
        <item>Alajuela</item>
        <item>San Ramón</item>
        <item>Grecia</item>
        <item>San Mateo</item>
        <item>Atenas</item>
        <item>Naranjo</item>
        <item>Palmares</item>
        <item>Poás</item>
        <item>Orotina</item>
        <item>San Carlos</item>
        <item>Zarcero</item>
        <item>Sarchí</item>
        <item>Upala</item>
        <item>Los Chiles</item>
        <item>Guatuso</item>
        <item>Río Cuarto</item>
    </string-array>
    <string-array name="cantones_Cartago">
        <item>Cartago</item>
        <item>Paraíso</item>
        <item>La Unión</item>
        <item>Jiménez</item>
        <item>Turrialba</item>
        <item>Alvarado</item>
        <item>Oreamuno</item>
        <item>El Guarco</item>
    </string-array>
    <string-array name="cantones_Heredia">
        <item>Heredia</item>
        <item>Barva</item>
        <item>Santo Domingo</item>
        <item>Santa Bárbara</item>
        <item>San Rafael</item>
        <item>San Isidro</item>
        <item>Belén</item>
        <item>Flores</item>
        <item>San Pablo</item>
        <item>Sarapiquí</item>
    </string-array>
    <string-array name="cantones_Guanacaste">
        <item>Liberia</item>
        <item>Nicoya</item>
        <item>Santa Cruz</item>
        <item>Bagaces</item>
        <item>Carrillo</item>
        <item>Cañas</item>
        <item>Abangares</item>
        <item>Tilarán</item>
        <item>Nandayure</item>
        <item>La Cruz</item>
        <item>Hojancha</item>
    </string-array>
    <string-array name="cantones_Puntarenas">
        <item>Puntarenas</item>
        <item>Esparza</item>
        <item>Buenos Aires</item>
        <item>Montes de Oro</item>
        <item>Osa</item>
        <item>Quepos</item>
        <item>Golfito</item>
        <item>Coto Brus</item>
        <item>Parrita</item>
        <item>Corredores</item>
        <item>Garabito</item>
        <item>Monteverde</item>
    </string-array>
    <string-array name="cantones_Limón">
        <item>Limón</item>
        <item>Pococí</item>
        <item>Siquirres</item>
        <item>Talamanca</item>
        <item>Matina</item>
        <item>Guácimo</item>
    </string-array>
    <string-array name="distritos_San_Jose">
        <item>Carmen</item>
        <item>Merced</item>
        <item>Hospital</item>
        <item>Catedral</item>
        <item>Zapote</item>
        <item>San Francisco de Dos Ríos</item>
        <item>Uruca</item>
        <item>Mata Redonda</item>
        <item>Pavas</item>
        <item>Hatillo</item>
        <item>San Sebastián</item>
    </string-array>
    <string-array name="distritos_Escazú">
        <item>Escazú</item>
        <item>San Antonio</item>
        <item>San Rafael</item>
    </string-array>
    <string-array name="distritos_Desamparados">
        <item>Desamparados</item>
        <item>San Miguel</item>
        <item>San Juan de Dios</item>
        <item>San Rafael Arriba</item>
        <item>San Antonio</item>
        <item>Frailes</item>
        <item>Patarra</item>
        <item>San Cristobal</item>
        <item>Rosario</item>
        <item>Damas</item>
        <item>San Rafael Abajo</item>
        <item>Gravilias</item>
        <item>Los Guido</item>
    </string-array>
    <string-array name="distritos_Puriscal">
        <item>Santiago</item>
        <item>Mercedes Sur</item>
        <item>Barbacoas</item>
        <item>Grifo Alto</item>
        <item>San Rafael</item>
        <item>Candelarita</item>
        <item>Desamparaditos</item>
        <item>San Antonio</item>
        <item>Chires</item>
    </string-array>
    <string-array name="distritos_Tarrazú">
        <item>San Marcos</item>
        <item>San Lorenzo</item>
        <item>San Carlos</item>
    </string-array>
    <string-array name="distritos_Aserrí">
        <item>Aserrí</item>
        <item>Tarbaca</item>
        <item>Vuelta de Jorco</item>
        <item>San Gabriel</item>
        <item>Legua</item>
        <item>Monterrey</item>
        <item>Salitrillos</item>
    </string-array>
    <string-array name="distritos_Mora">
        <item>Colón</item>
        <item>Guayabo</item>
        <item>Tabarcia</item>
        <item>Piedras Negras</item>
        <item>Picagres</item>
        <item>Jaris</item>
        <item>Quitirrisí</item>
    </string-array>
    <string-array name="distritos_Goicoechea">
        <item>Guadalupe</item>
        <item>San Francisco</item>
        <item>Calle Blancos</item>
        <item>Mata de Plátano</item>
        <item>Ipis</item>
        <item>Rancho Redondo</item>
        <item>Purral</item>
    </string-array>
    <string-array name="distritos_Santa_Ana">
        <item>Santa Ana</item>
        <item>Salitral</item>
        <item>Pozos</item>
        <item>Uruca</item>
        <item>Piedades</item>
        <item>Brasil</item>
    </string-array>
    <string-array name="distritos_Alajuelita">
        <item>Alajuelita</item>
        <item>San Josecito</item>
        <item>San Antonio</item>
        <item>Concepción</item>
        <item>San Felipe</item>
    </string-array>
    <string-array name="distritos_Vazquez_de_Coronado">
        <item>San Isidro</item>
        <item>San Rafael</item>
        <item>Dulce Nombre de Jesús</item>
        <item>Patalillo</item>
        <item>Cascajal</item>
    </string-array>
</resources>