<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lines"
    tools:context=".registro">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="310dp"
        android:layout_height="124dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/btnVolverALogin"
        android:layout_width="68dp"
        android:layout_height="76dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@string/boton_de_volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go_back"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/txtConfirmarContrasena"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="592dp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:hint="@string/confirmar_contrase_a"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:text="@string/registrase"
        android:textColor="#2E4369"
        android:textSize="55sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/txtEmailRegistro"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="456dp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtContrasenaRegistro"
        android:layout_width="374dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="520dp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:hint="@string/constrase_a"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/txtApellido"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="388dp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="162dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="388dp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegistrarUsuario"
        android:layout_width="272dp"
        android:layout_height="68dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="804dp"
        android:backgroundTint="#3A8AC9"
        android:text="@string/registrar"
        android:textColor="#C5EEFC"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="704dp"
        android:text="@string/qu_eres"
        android:textColor="#2E4369"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <RadioGroup
        android:layout_width="254dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarContrasena"
        app:layout_constraintVertical_bias="0.228">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:text="@string/estudiante"
            android:textColor="#2E4369"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/tutor"
            android:textColor="#2E4369"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>