<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lines"
    tools:context=".login">

    <EditText
        android:id="@+id/txtEmail"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="308dp"
        android:layout_height="66dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="492dp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnIngresarLogin"
        android:layout_width="280dp"
        android:layout_height="74dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="208dp"
        android:backgroundTint="#3A8AC9"
        android:text="@string/ingresar"
        android:textColor="#C5EEFC"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtContraseña"
        android:layout_width="309dp"
        android:layout_height="69dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="376dp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:hint="@string/constrase_a"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnOlvideContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="304dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="283dp"
        android:layout_height="104dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/btnVolverAIncio"
        android:layout_width="68dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="144dp"
        android:contentDescription="@string/boton_de_volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/go_back"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnCrearcuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="120dp"
        android:background="@color/cardview_shadow_end_color"
        android:text="@string/crear_una_cuenta"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="132dp"
        android:text="@string/no_tienes_cuenta"
        android:textColor="#33577B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintOverlap" />

</androidx.constraintlayout.widget.ConstraintLayout>