<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">
    <LinearLayout
        android:id="@+id/llUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/nombre1"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/nombre"
            android:textColor="#1B325F" />

        <TextView
            android:id="@+id/curso1"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/titulo_carrera"
            android:textColor="#1B325F" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="0"
                android:contentDescription="@string/estrella_calificaci_n"
                android:scaleType="fitCenter"
                android:src="@drawable/star"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/calificacion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/calificaci_n"
                android:textColor="#E9F2F9"
                tools:ignore="TextContrastCheck" />
        </FrameLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>