<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lines"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:textAlignment="gravity"
    tools:context=".cambioContrasena">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnVolverALogin2"
            android:layout_width="59sp"
            android:layout_height="65sp"
            android:layout_gravity="left"
            android:layout_marginRight="35sp"
            android:adjustViewBounds="true"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/boton_de_volver"
            android:scaleType="centerInside"
            android:src="@drawable/angle_left"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="214sp"
            android:layout_height="65sp"
            android:layout_gravity="center|center_horizontal"
            android:contentDescription="@string/Logo"
            app:srcCompat="@drawable/marca" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="306dp"
        android:layout_height="139dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/quicksand"
        android:gravity="right"
        android:text="@string/cambio_de_contrase_a"
        android:textAlignment="textStart"
        android:textColor="#2E4369"
        android:textSize="55sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/txtEmailCambio"
        android:layout_width="325dp"
        android:layout_height="58dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="TextFields,TextContrastCheck" />

    <EditText
        android:id="@+id/txtNuevaContrasena"
        android:layout_width="325dp"
        android:layout_height="58dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/nueva_contrase_a"
        android:inputType="textPassword"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/txtConfirmarNueva"
        android:layout_width="325dp"
        android:layout_height="58dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:autofillHints=""
        android:background="@drawable/borde_edit_text"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/nueva_contrase_a"
        android:inputType="textPassword"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnCambiarContraseña"
        android:layout_width="325dp"
        android:layout_height="67dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="#3A8AC9"
        android:fontFamily="@font/quicksand"
        android:text="@string/cambiar_contrase_a"
        android:textColor="#C5EEFC"
        android:textSize="24sp"
        app:cornerRadius="12dp"
        tools:ignore="VisualLintButtonSize,TextSizeCheck" />

</LinearLayout>