<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lines"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".inicio">

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="214sp"
        android:layout_height="65sp"
        android:layout_margin="45sp"
        app:srcCompat="@drawable/marca" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28sp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/introduction"
        android:textColor="#1B325F"
        android:textSize="38sp" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:backgroundTint="#F36C4F"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/registrar"
        android:textColor="#FFE9E3"
        android:textSize="38dp"
        app:cornerRadius="8sp"
        tools:ignore="SpUsage,VisualLintButtonSize,VisualLintBounds,TextContrastCheck" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:backgroundTint="#3A8AC9"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/ingresar"
        android:textColor="#D7FAFF"
        android:textSize="38dp"
        app:cornerRadius="8sp"
        tools:ignore="SpUsage,VisualLintButtonSize,VisualLintBounds" />
</LinearLayout>